--- a/pokedex_app/src/style/header.css
+++ b/pokedex_app/src/style/header.css
@@ -3,12 +3,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
+  max-width: 350px;
+  margin: auto;
 }
 
 #name {
   order: 0;
   text-align: center;
-  font-size: 2em;
+  font-size: 14px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -20,6 +22,23 @@
   order: 1;
 }
 
+.img-container {
+  border-color: rgba(0, 0, 0, 0.61);
+  border-width: 1px;
+  border-style: solid;
+  order: 2;
+  width: 100%;
+  max-height: 200px;
+  max-width: 300px;
+  margin: 0 auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
